Public Bot for Reddit video save

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,13 +1,13 @@
+BOT_TOKEN=79878978:P3U7kWZoHkHx3FdV3LBgWVRerRj-tvhxrac
+ADMINS=2312321,464564654,654654654
+USE_REDIS=False
+
 BOT_CONTAINER_NAME=bot_container_name
 BOT_IMAGE_NAME=botimage_name
 BOT_NAME=mybotname
-BOT_TOKEN=123456:Your-TokEn_ExaMple
-ADMINS=123456,654321
-USE_REDIS=False
 
 DB_USER=exampleDBUserName
 PG_PASSWORD=examplePostgresPass
 DB_PASS=exampleDBPassword
 DB_NAME=exampleDBName
 DB_HOST=127.0.0.1
-
