--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,33 @@
 version: '3.3'
 
 services:
+#  db:
+#    image: postgres
+#    container_name: database
+#    restart: always
+#    env_file:
+#      - ".env"
+#    environment:
+#      POSTGRES_PASSWORD: $PG_PASSWORD
+#    ports:
+#      - 5432:5432
+#    networks:
+#    - tg_bot
+#    volumes:
+#      - ./db:/var/lib/postgresql
+#    depends_on:
+#      - db
+#  adminer:
+#      image: adminer
+#      restart: always
+#      ports:
+#        - 8081:8080
   bot:
     image: "${BOT_IMAGE_NAME:-tg_bot-image}"
-    container_name: "${BOT_CONTAINER_NAME:-tg_bot-container}"
+    container_name: "${BOT_CONTAINER_NAME:-_container}"
     stop_signal: SIGINT
+    env_file:
+      - ".env"
     build:
       context: .
     working_dir: "/usr/src/app/${BOT_NAME:-tg_bot}"
@@ -12,11 +35,10 @@ services:
     - .:/usr/src/app/${BOT_NAME:-tg_bot}
     command: python3 -m bot
     restart: always
-    env_file:
-      - ".env"
     networks:
     - tg_bot
-
+    environment:
+      TZ: Asia/Shanghai
 
 networks:
   tg_bot:
