--- a/.env.exemple
+++ b/.env.exemple
@@ -11,3 +11,6 @@ PG_PASSWORD=examplePostgresPass
 DB_PASS=exampleDBPassword
 DB_NAME=exampleDBName
 DB_HOST=127.0.0.1
+
+DOCKER_LOGIN=your_docker_login
+TZ=Europe/Moscow
