--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -26,7 +26,7 @@ services:
 #      ports:
 #        - 8081:8080
   bot:
-    image:  ${DOCKER_LOGIN}/redditbot
+    image:  ${DOCKER_LOGIN}/redditbot:latest
     env_file: .env
     stop_signal: SIGINT
     volumes:
@@ -35,7 +35,7 @@ services:
     networks:
     - tg_bot
     environment:
-      TZ: ${TZ}
+      TZ: ${TIME_ZONE}
 
 networks:
   tg_bot:
