--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/redditbot:latest
 
   deploy:
+    name: Deploy RedditBot to server
     runs-on: ubuntu-latest
     needs:
       - build_and_push_to_docker_hub
@@ -59,6 +60,7 @@ jobs:
 
 
   send_message:
+    name: Send message to Telegram
     runs-on: ubuntu-latest
     needs: deploy
     steps:
