--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - ".env"
     build:
       context: .
-    working_dir: "/usr/src/app/${BOT_NAME:-tg_bot}"
+    working_dir: "/app/${BOT_NAME:-tg_bot}"
     volumes:
     - .:/app/
     command: python3 -m bot
