--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,9 +8,7 @@ services:
     container_name: redditbot-container
     env_file: .env
     image: ${DOCKER_LOGIN}/redditbot
-    command: python3 -m bot
+    command: python -m bot
     restart: always
     volumes:
       - bot_data:/app/
-    environment:
-      TZ: ${TIME_ZONE}
