--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,7 +8,7 @@ services:
     container_name: redditbot-container
     env_file: .env
     image: ${DOCKER_LOGIN}/redditbot
-    command: python -m bot
+    command: python3 -m bot
     restart: always
     volumes:
       - bot_data:/app/
