--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ on:
       - master
 
 jobs:
-  build_and_push_to_docker_hub:
-    name: Push RedditBot image to DockerHub
+  build_and_deploy:
+    name: Build, Push and Deploy RedditBot
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -19,21 +19,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerHub
+      - name: Build and push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/redditbot:latest
-
-  deploy:
-    name: Deploy RedditBot to server
-    runs-on: ubuntu-latest
-    needs:
-      - build_and_push_to_docker_hub
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
       - name: Copy docker-compose.production.yml via ssh
         uses: appleboy/scp-action@master
         with:
@@ -52,21 +43,14 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             cd redditbot
-            # Выполняет pull образов с Docker Hub
             sudo docker compose -f docker-compose.production.yml pull
-            # Перезапускает все контейнеры в Docker Compose
             sudo docker compose -f docker-compose.production.yml down
             sudo docker compose -f docker-compose.production.yml up -d
-
-
-  send_message:
-    name: Send message to Telegram
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
       - name: Send message
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Деплой успешно выполнен!
+          message: |
+            ${{ steps.deploy.outcome == 'success' && 'Деплой успешно выполнен!' || 'Деплой не удался. Проверьте логи.' }}
+
