--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/redditbot:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Copy docker-compose.production.yml via ssh
         uses: appleboy/scp-action@master
         with:
