--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            ${{ steps.deploy_step.outcome == 'success' && 'Деплой успешно выполнен!' || 'Деплой не удался. Проверьте логи.' }}
+            ${{ steps.deploy_step.outcome == 'success' && '🟢 Деплой успешно выполнен!' || '🔴 Деплой не удался. Проверьте логи.' }}
