Upd logger, add clear tmp folders

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ requests~=2.28.2
 beautifulsoup4~=4.11.2
 pyhelpers~=1.4.5
 urllib3~=1.26.14
+betterlogging
 fake-useragent~=1.1.1
 lxml~=4.9.2
 aiohttp~=3.8.3
