--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ requests~=2.28.2
 beautifulsoup4~=4.11.2
 pyhelpers~=1.4.5
 urllib3~=1.26.14
-betterlogging
+betterlogging~=1.0.0
 fake-useragent~=1.1.1
 lxml~=4.9.2
 aiohttp~=3.8.3
 ffmpeg-python~=0.2.0
-asyncpraw
+praw~=7.7.1
